--- a/src/App.scss
+++ b/src/App.scss
@@ -6,35 +6,22 @@
 
 .todoApp--wrapper {
   margin: 20px 0 20px 0;
-  border: 1px solid black;
   padding: 5px;
-  border-radius: 7px;
-  width: 400px;
+  width: 90%;
 }
 
 .todoApp--header {
   margin-bottom: 10px;
 
-  &__form {
-    display: flex;
-    column-gap: 10px;
-  }
+
 
   &__title {
     text-align: center;
   }
 
-  &__add-task-btn {
-    padding: 5px;
-    cursor: pointer;
-    border: none;
-    outline: none;
 
-  }
 
-  &__task-name-input {
-    flex-grow: 1;
-  }
+
 }
 
 .todoApp--main {
@@ -42,17 +29,27 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
+
+  .listTask {
+    border: 1px solid black;
+    padding: 8px;
+    overflow-y: auto;
+    height: 100vh;
+  }
+
   .task {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin-bottom: 7px;
+    padding: 8px;
+    border: 1px solid black;
 
     &__name {
       margin: 0;
       font-weight: 600;
       height: 19px;
-      text-align: center;
+      text-align: left;
 
       &--done {
         color: green;
@@ -70,6 +67,26 @@
     }
 
   }
+
+  &__form {
+    column-gap: 10px;
+  }
+
+  &__task-name-input {
+    flex-grow: 1;
+  }
+
+  &__date-picker-input {
+    width: 100%;
+  }
+
+  &__add-task-btn {
+    // padding: 20px;
+    cursor: pointer;
+    border: none;
+    outline: none;
+
+  }
 }
 
 .content-overflow {
@@ -80,4 +97,8 @@
     // -webkit-line-clamp: 2;
     // -webkit-box-orient: vertical;
     // overflow: hidden;
+}
+
+.notify-high-light{
+  background-color: rgb(241, 167, 183);
 }
